fix: change header z-index

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -41,6 +41,7 @@
     border-radius: 8px;
     background: $color-white;
     box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.08);
+    z-index: 2;
 
     &_closed {
       display: none;
